filters line height, footnote number hyperlinks, empty listing text, header z-index, person listing layout fix

--- a/web/themes/custom/nrgi/assets/css/style.css
+++ b/web/themes/custom/nrgi/assets/css/style.css
@@ -1760,6 +1760,7 @@ ul li a:hover {
   box-sizing: border-box;
   cursor: pointer;
   display: flex;
+  line-height: 1.5;
   padding: 1rem 1rem 1rem 2.5rem;
   position: relative;
   transition: background-color 0.3s;
@@ -2165,6 +2166,16 @@ ul li a:hover {
 .c-footnotes__list-item:last-child {
   margin-bottom: 0;
 }
+.c-footnotes__list-label {
+  text-decoration: underline;
+  text-decoration-color: transparent;
+  text-decoration-thickness: 1px;
+  text-underline-offset: 5px;
+  transition: all 0.3s;
+}
+.c-footnotes__list-label:hover, .c-footnotes__list-label:focus {
+  text-decoration-color: currentColor;
+}
 .c-footnotes__list-content a {
   word-break: break-all;
 }
@@ -2298,7 +2309,7 @@ ul li a:hover {
 
 /** @define c-header */
 .c-header {
-  z-index: 2;
+  z-index: 5;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0.3) 0%, rgba(0, 0, 0, 0) 93.27%);
   border-bottom: 1px solid #EDEDEF;
   box-sizing: border-box;
@@ -2549,25 +2560,24 @@ ul li a:hover {
   }
 }
 .c-listing__empty {
-  font-family: "Noto Sans", sans-serif;
-  font-size: 1.375rem;
-  line-height: 1.75;
-  font-weight: 400;
-  font-size: 1.125rem;
+  font-family: "Cabinet Grotesk", sans-serif;
+  font-weight: 500;
+  font-size: 2rem;
+  line-height: 1.5;
+}
+@media (max-width: 94.5rem) {
+  .c-listing__empty {
+    font-size: 1.75rem;
+  }
 }
 @media (max-width: 64rem) {
   .c-listing__empty {
-    font-size: 1.125rem;
+    font-size: 1.5rem;
   }
 }
 @media (max-width: 48rem) {
   .c-listing__empty {
-    font-size: 1rem;
-  }
-}
-@media (max-width: 64rem) {
-  .c-listing__empty {
-    font-size: 1rem;
+    font-size: 1.125rem;
   }
 }
 .c-listing__filters {
