--- a/web/themes/custom/nrgi/assets/src/scss/tools/mixins.scss
+++ b/web/themes/custom/nrgi/assets/src/scss/tools/mixins.scss
@@ -27,7 +27,7 @@
 /* stylelint-disable */
 $z-index : (
     footer: 10,
-    header: 2,
+    header: 5,
     hero-content: 1,
     hero-image: 1,
     breadcrumbs: 1,
